# cpu-test

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.c
lib/: rasp_tools.c  rasp_tools.h  utils.c  utils.h
